# hodgecy

./: .gitignore  .zenodo.json  CITATION.cff  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  pyproject.toml
docs/: atom_profile_vs_defect.md  node_scheme_defect_critical_degree.md  smoothing_bridge_local_model.md
m2/: node_scheme_hilbert_function.m2  smoothing_bridge_112_node_defect.m2  smoothing_bridge_node_check.m2  verify_smoothing_bridge_genericity.m2
scripts/: audit_lattices_84_84a.py  build_ckc_239_240_241_theorem_values.py  build_concurrency_profiles_84_84a.py  build_defect_queue.py  build_smoothing_bridge_atom_profiles.py  build_v0_2_0_release.py  cluster_equivariant_spectra_fixed_equations.py  compare_smoothing_bridge_84_84a.py  compute_equivariant_spectrum_control_triple.py  compute_fixed_equation_batch_001.py  extract_ckc_equation_index_from_pdf.py  find_discriminating_pairs.py  generate_paper_assets.py  report_family_candidates.py  search_arrangement_83_representative.py  smoothing_bridge_84_84a.py  verify_smoothing_bridge_84_84a.py
singular/: node_scheme_hilbert_function.sing  smoothing_bridge_112_node_defect.sing  smoothing_bridge_node_check.sing  verify_smoothing_bridge_genericity.sing
tests/: test_arrangement_lattice_audit.py  test_atom_profile_comparison.py  test_atom_profile_schema.py  test_ckc_239_240_241_theorem_values.py  test_ckc_fixed_rational_batch.py  test_ckc_pdf_extraction.py  test_clustering.py  test_concurrency_profile.py  test_concurrency_profiles.py  test_cynk_meyer_dataset.py  test_defect_queue.py  test_equivariant_incidence.py  (+17 more)
(+245 files in other folders)
