[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hodgecy"
version = "0.1.0"
description = "Computational research tools for HodgeCY under GeoCY."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "A. Rahman", email = "arahman@alum.howard.edu" }
]
dependencies = [
  "pandas>=2.0",
  "sympy>=1.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
